Prevent overflow

--- a/src/client/components/MainFooter/MainFooter.module.scss
+++ b/src/client/components/MainFooter/MainFooter.module.scss
@@ -2,6 +2,7 @@
 
 .MainFooter {
   background-color: $color-neutral-grey4;
+  overflow: hidden;
 }
 
 .InnerContainer {
